rtdata/themes/RawTherapee-GTK3-20_.css
/*
  This file is part of RawTherapee.

  Copyright (c) 2015-2020 RawTherapee
  Contributions by DrSlony, Hombre, TooWaBoo, Thanatomanic

  RawTherapee is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  RawTherapee is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with RawTherapee.  If not, see <https://www.gnu.org/licenses/>.
*/

/***************************/
/**/ @import "size.css"; /**/ /* TODO: Remove this weird dependancy */
/***************************/

/* text-shadow causes a serious performance degradation in rendering the UI,
 * at least in comboboxes with many entries (i.e. Profiled Lens Correction).
*/

* {
    color: #AAAAAA;
    text-shadow: none;
}

*:disabled {
    color: #666666;
    opacity: 0.7;
}

.view:selected:not(check):not(radio) {
    color: #262626;
    background-color: #AAAAAA
}

/* The Places and Dir browser panels */
textview.view, treeview.view {
    padding: 0;
    margin: 0;
}
.view, .textview, textview, textview.view {
    background-color: #262626;
}
/* The headers of these panels */
.view .button {
    background-color: #363636;
}

window > box {
    padding: 0.416666666666666666em;
}
window.background {
    background-color: #484848;
}

/*** Window decoration *********************************************************/
@define-color winHeaderbar rgb(50,50,50);

.csd:not(.popup):not(tooltip) > decoration {
    background-color: #484848;
    background-image: none;
    box-shadow: 0 0.25em 0.75em 0.083333333333333333em rgba(0, 0, 0, 0.5), 0 0 0 0.083333333333333333em #242424;
}
headerbar {
    background-color: shade(@winHeaderbar,1.12);
    box-shadow: inset 0 0.083333333333333333em rgba(200,200,200,.13);
    background-image: linear-gradient(shade(@winHeaderbar,1.14), shade(@winHeaderbar,.86));
    border-bottom-color: #242424;
}
dialog > box {
    padding: 0.666666666666666666em;
}
dialog.csd #PrefNotebook > header,
dialog.csd #AboutNotebook > header,
window.csd:not(.fullscreen) #MainNotebook > header.top {
    border-top-color: #484848;
}

/* Window state */
.maximized > headerbar {
    border-radius: 0;
}
/**/

/*** End Window decoration *****************************************************/

arrow {
    min-width: 1.333333333333333333em;
    min-height: 1.333333333333333333em;
}
cellview {
    margin: -1px 0;
}

overshoot,
undershoot {
    background-image: none; /* removes the dashed scrollbar line */
}

dialog.background {
    background-color: #484848;
}

box, grid {
    border-width: 0;
    border-style: none;
    border-radius: 0;
    margin: 0.083333333333333333em;
    padding: 0;
    min-height: 0.4166666666666666em;
    min-width: 0.4166666666666666em;
}
label {
    padding: 0.083333333333333333em 0;
    margin: 0.19em;
    min-height: 1.333333333333333333em;
}

/* Affects all frames except in the toolbox */
frame {
    padding: 0;
    margin-bottom: 0.75em;
}

/* Create space between frame contents and frame border */
frame border {
    border: 1px solid #262626;
    border-radius: 0.3333333333333333em;
    padding: 0.083333333333333333em;
}

frame > label {
    color: #D8D8D8;
    padding: 0.416666666666666666em 0.25em;
}

/* affects selection list*/
entry > window > frame {
    margin: 0;
}

tooltip {
    border-radius: 0.416666666666666666em;
    background-color: rgba(0,0,0,0.95);
    border-style: none;
    box-shadow: none;
    padding: 0;
    margin: 0;
}

treeview header button {
    background-image: linear-gradient(#343434, #2E2E2E, #292929);
}

/*** Separator *********************************************************************************/
separator,
.separator {
    border: none;
    min-width: 0.083333333333333333em;
    min-height: 0.083333333333333333em;
}
grid separator, box separator {
    background-color: rgba(0, 0, 0, 0.17);
}
grid separator.horizontal, box separator.horizontal {
    margin: 0.5em 0.25em;
}
grid separator.vertical, box separator.vertical {
    margin: 0.25em 0.5em;
}

popover separator:not(:only-child) {
    margin: 0 0.5em;
}

paned.horizontal > separator {
    margin:  0 0.16666666666666666em;
}

paned.vertical > separator {
    margin: 0.25em 0;
}

dialog paned.horizontal > separator {
    min-width: 0.333333333333333333em;
}

menu separator {
    margin: 0.25em 0.5em;
}

#Navigator separator {
    margin: 0;
}

.scrollableToolbar separator.vertical {
    margin: 0.19em;
}

#MyExpander separator.horizontal {
    margin: 0.25em 0.19em;
}
#MyFileChooserButton separator {
}

#PlacesPaned .view.separator {
}

#MetaPanelNotebook separator {
    margin: 0.19em 0;
}
/*** end****************************************************************************************/

#FileBrowser {
    padding: 0.1666666666666666em;
    margin: 0;
}

#FileCatalog {
    background-color: #393939;
}
#FileCatalog:selected {
    background-color: #565656;
}

#BeforeAfterContainer frame {
    background-color: #262626;
    padding: 0;
    margin: 0.0833333333333333em;
}

#BeforeAfterContainer frame border {
    border-radius: 0;
    margin: 0;
    padding: 0;
}


/* Frames in the toolbox. Not MyExpander frames. */
eventbox.frame {
    border-color: #565656;
}

/*** Load - Save dialog ************************************************************************/
filechooser {
margin-bottom: 0.25em;
}

filechooser box > box box > button {
margin-top: 0.5em;
margin-right: 0;
}

filechooser #pathbarbox {
    padding: 0.5em;
}

/* Right side */
filechooser > box > paned > box:nth-child(3) {
    border-width: 0.083333333333333333em;
    padding: 0;
    margin: 0;
}
/* ... */

